Fix overflow on long comments

--- a/src/styles/Comment.css
+++ b/src/styles/Comment.css
@@ -19,6 +19,7 @@
   border-radius: 30px;
   padding: 10px 25px;
   position: relative;
+  max-width: 90%;
 }
 
 .comment-author {
